[gd_scene load_steps=9 format=3 uid="uid://5ye6f6br2bts"]

[ext_resource type="Script" path="res://scenes/user_interface/user_interface.gd" id="1_w7rwt"]
[ext_resource type="FontFile" uid="uid://d0255d1mb1ym6" path="res://assets/fonts/Roboto-Medium.ttf" id="3_a6ww4"]

[sub_resource type="LabelSettings" id="LabelSettings_hjnc2"]
font = ExtResource("3_a6ww4")
font_size = 36
outline_size = 6
outline_color = Color(0, 0, 0, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_w66vx"]
font = ExtResource("3_a6ww4")
font_size = 36
outline_size = 6
outline_color = Color(0, 0, 0, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_aeeye"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_usns4"]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_vg8d4"]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gvvnj"]
_data = {
"RESET": SubResource("Animation_aeeye"),
"fade_in": SubResource("Animation_usns4"),
"fade_out": SubResource("Animation_vg8d4")
}

[node name="UserInterface" type="CanvasLayer"]
script = ExtResource("1_w7rwt")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 16

[node name="InteractionContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="InteractionLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/InteractionContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_hjnc2")

[node name="DialogueContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="DialogueLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/DialogueContainer"]
layout_mode = 2
size_flags_horizontal = 3
label_settings = SubResource("LabelSettings_w66vx")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gvvnj")
}
autoplay = "fade_in"

[node name="DialogueTimer" type="Timer" parent="."]
